update entity Product Size